--- a/examples/src/styles.scss
+++ b/examples/src/styles.scss
@@ -1,6 +1,6 @@
 @import 'variables.scss';
-@import url(https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
-@import '~https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css';
+@import url(https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css);
+@import 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css';
 
 html,body {
     margin: 0;
